gcc/testsuite/rust/rustc/ui/async-await/no-async-const.rs
// edition:2018
// compile-flags: --crate-type lib

pub async const fn x() {}
// { dg-error "" "" { target *-*-* } .-1 }

